Removendo integração com WhatsApp API; adicionando exemplo de arquivo de variáveis de ambiente; e configurando arquivo Docker para a criação de um banco de dados mockado.